--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,28 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  -JDK_Version: '1.11'
+
 steps:
-- task: Maven@3
+
+- script: echo Building for jdk $(JDK_Version)
+  displayName: Totally necessary info script
+- task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
+    jdkVersionOption: $(JDK_Version)
     jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
+    publishJUnitResults: false
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: PublishCodeCoverageResults@2
+  inputs:
+    summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/site/jacoco/jacoco.xml" 
+    reportDirectory: "$(System.DefaultWorkingDirectory)/**/site/jacoco"
+    failIfCoverageEmpty: true
+- task: CmdLine@2
+  inputs:
+    script: 'echo End of build and tests'
